update to JDK 11 & Junit 5 : omidashouri : 98.06.24